--- a/src/main/resources/templates/azienda/indexAzienda.html
+++ b/src/main/resources/templates/azienda/indexAzienda.html
@@ -12,10 +12,11 @@
 <body>
 	<header>
 	
+	<div class="immagine">
+	<a href="/"> <img src="/immagini/logosiw2.png" alt="Logo"></a>
+	</div>
 	  <div class="header-links">
-            <a href="paginaAziende">Aziende</a>
-            <a href="formRegistrazione">Registrazione</a>
-            <a href="/login">Login</a>
+           <a href="paginaAziende">Aziende</a>
             <a href="/logout">Logout</a>
         </div>
 	
