--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,9 @@
 
 <body>
 	<header>
-	
+	<div class="immagine">
+	<a href="/"> <img src="immagini/logosiw2.png" alt="Logo"></a>
+	</div>
 	  <div class="header-links">
             <a href="paginaAziende">Aziende</a>
             <a href="formRegistrazione">Registrazione</a>
@@ -23,9 +25,13 @@
 	<div class="main-section">
         <div class="centered-photo">
             <img src="/immagini/fronte.jpg" alt="Descrizione della foto">
+            <p>Benvenuti su SIW MODA, la piattaforma dedicata a mettere in contatto gli studenti 
+            universitari di moda con le migliori aziende del settore. 
+           Scopri le opportunità di lavoro, stage e collaborazioni che ti aspettano!</p>
         </div>
+        
     </div>
-	
+		
 	
 </body>
 
