--- a/src/main/resources/templates/paginaAziende.html
+++ b/src/main/resources/templates/paginaAziende.html
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>
-		SiwFood - Homepage
-	</title>
-	<link rel="stylesheet" href="/css/paginaAziende.css" />
-	
+    <meta charset="UTF-8">
+    <title>SiwFood - Homepage</title>
+    <link rel="stylesheet" href="/css/paginaAziende.css" />
 </head>
 
 <body>
-	<header>
-	
-	  <div class="header-links">
-            <a href="paginaAziende">Aziende</a>
-            <a href="formRegistrazione">Registrazione</a>
-            <a href="/login">Login</a>
+    <header>
+  
+	<div class="immagine">
+	<a href="/"> <img src="immagini/logosiw2.png" alt="Logo"></a>
+	</div>
+        <div class="header-links">
+           <a href="/">Home</a>
+            <a href="/logout">Logout</a>
         </div>
-	
-	</header>
-	
-	<h1>Aziende</h1>
-	 <div class="container">
-	<div th:if="${aziende==null || aziende.isEmpty()}">Non ci sono aziende nel sistema</div>
-	
-		<div th:each="azienda : ${aziende}">
-			<a th:href="@{'/azienda' + '/' + ${azienda.id}}" th:text="${azienda.nome} ">Up!
-				(2000)</a>
-		<img src="/immagini/Glamour.jpeg" alt="Descrizione della foto">
-		
-			</div>
-		</div>
-	</ul>
-	
-	
+    </header>
+
+    <h1>Aziende</h1>
+    <div class="container">
+        <div th:if="${aziende == null || aziende.isEmpty()}">Non ci sono aziende nel sistema</div>
+        <div th:each="azienda : ${aziende}" class="azienda-item">
+            <a th:href="@{'/azienda/' + ${azienda.id}}" th:text="${azienda.nome}"></a>
+            <img th:src="'data:image/jpeg;base64,' + ${azienda.immagine}" alt="Immagine Azienda">
+        </div>
+    </div>
 </body>
 
 </html>
