--- a/src/main/resources/templates/studente/indexStudente.html
+++ b/src/main/resources/templates/studente/indexStudente.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-	<header>
-	
+<header>
+	<div class="immagine">
+	<a href="/"> <img src="immagini/logosiw2.png" alt="Logo"></a>
+	</div>
 	  <div class="header-links">
             
             <a href="/logout">Logout</a>
@@ -26,7 +28,7 @@
             </a>
         </div>
         <div id="quadrant2" class="quadrant">
-            <a href="/studente/bacheca" class="image-link">
+            <a href="/azienda/bacheca" class="image-link">
                 <div class="image-text">Bacheca</div>
             </a>
         </div>
