--- a/src/main/resources/templates/studente/formCreaEsame.html
+++ b/src/main/resources/templates/studente/formCreaEsame.html
@@ -6,20 +6,26 @@
 </head>
 <body>
     <header>
-        <h1>Aggiungi un Esame</h1>
+    <div class="immagine">
+	<a href="/"> <img src="/immagini/logosiw2.png" alt="Logo"></a></div>
+        <div class="header-links">
+		    <a href="/">Home</a>
+            <a href="/logout">Logout</a>
+        </div>
     </header>
-    <main>
+    
+    	<h1>Aggiungi un Esame</h1>
         <form action="/studente/aggiungiEsame" method="post">
-        <div>
+        <li>
             <label for="nomeEsame">Nome Esame:</label>
             <input type="text" id="nomeEsame" name="nomeEsame" required><br><br>
-            </div><div>
+            </li><li>
             <label for="votoEsame">Voto Esame:</label>
             <input type="number" id="votoEsame" name="votoEsame" required><br><br>
-            </div><div>
+            </li><li>
             <button type="submit">Aggiungi Esame</button>
-            </div>
+            </li>
         </form>
-    </main>
+    
 </body>
 </html>
