--- a/src/main/resources/templates/studente/formModificaProfilo.html
+++ b/src/main/resources/templates/studente/formModificaProfilo.html
@@ -2,50 +2,50 @@
 <html>
 
 <head>
-	<title>
-		Nuova Azienda
-	</title>
-	<link rel="stylesheet" href="/css/stud.css" />
+<title>Nuova Azienda</title>
+<link rel="stylesheet" href="/css/stud.css" />
 </head>
 
 <body>
-	
-	
-	<h1>Aggiungi Studente</h1>
-	<form th:action="@{/studente/formModificaStudente}" method="POST" >
-	<input type="hidden" name="id" th:value="${studente.id}" />
-  		
+
+	<header>
+		<div class="immagine">
+			<a href="/"> <img src="/immagini/logosiw2.png" alt="Logo"></a>
+		</div>
+		<div class="header-links">
+			<a href="/">Home</a> <a href="/logout">Logout</a>
+		</div>
+
+	</header>
+	<h1>Modifica Profilo</h1>
+	<form th:action="@{/studente/formModificaStudente}" method="POST"
+		th:object="${studente}">
+		<input type="hidden" name="id" th:value="${studente.id}" />
+		<div th:if="${#fields.hasGlobalErrors()}">
+			<p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
+		</div>
+
+
+		<li><a>Nome:</a> <span><input type="text" name="nuovoNome"
+				placeholder="Nuovo nome" th:value="${studente.nome}" /></span> <span
+			th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"> </span></li>
+
+		<li><a>cognome:</a> <span><input type="text"
+				name="nuovocognome" placeholder="Nuovo cognome"
+				th:value="${studente.cognome}" /></span> <span
+			th:if="${#fields.hasErrors('cognome')}" th:errors="*{cognome}">
+		</span> </span></li>
+
+		<li><a>Anno:</a> <span><input type="text" name="nuovoAnno"
+				placeholder="Nuovo anno" th:value="${studente.year}" /></span> <span
+			th:if="${#fields.hasErrors('year')}" th:errors="*{year}"></span></li>
+
 		
-		<div>
-			<a>Nome:</a> <span><input type="text" name="nuovoNome" placeholder="Nuovo nome" th:value="${studente.nome}" /></span>
-		   
-		    </span>
-		    
-		</div>
-
-		<div>
-			<a>cognome:</a> <span><input type="text" name="nuovocognome" placeholder="Nuovo cognome" th:value="${studente.cognome}" /></span>
-
-		    </span>
-		    
-		    </span>
-		</div>
-
-		<div>
-			<a>Anno:</a> <span><input type="text" name="nuovoAnno" placeholder="Nuovo anno" th:value="${studente.year}" /></span>
-		    
-		    </span>
-			
-		</div>
-		<div>
-			<a>Email:</a> <span><input type="text" name="nuovoEmail" placeholder="Nuovo email" th:value="${studente.email}" /></span>
-		    
-		    </span>
-			
-		</div>
-		<div>
-			<span><button type="submit">Conferma</button></span>
-		</div>
+		<li><a>Email:</a> <span><input type="text"
+				name="nuovoEmail" placeholder="Nuovo email"
+				th:value="${studente.email}" /></span> <span
+			th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span></li>
+		<li><span><button type="submit">Conferma</button></span></li>
 	</form>
 </body>
 
